WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
178698
-Wsubobject-linkage warning in InspectorIndexedDBAgent.cpp
https://bugs.webkit.org/show_bug.cgi?id=178698
Summary
-Wsubobject-linkage warning in InspectorIndexedDBAgent.cpp
Michael Catanzaro
Reported
2017-10-23 19:27:34 PDT
Let's fix this: [2219/3619] Building CXX object Source...unified-sources/UnifiedSource260.cpp.o In file included from DerivedSources/WebCore/unified-sources/UnifiedSource260.cpp:1:0: ../../Source/WebCore/inspector/InspectorIndexedDBAgent.cpp:664:7: warning: ‘WebCore::ClearObjectStore’ has a field ‘WebCore::ClearObjectStore::<anonymous>’ whose type uses the anonymous namespace [-Wsubobject-linkage] class ClearObjectStore final : public ExecutableWithDatabase { ^~~~~~~~~~~~~~~~ ../../Source/WebCore/inspector/InspectorIndexedDBAgent.cpp:664:7: warning: ‘WebCore::ClearObjectStore’ has a base ‘WebCore::{anonymous}::ExecutableWithDatabase’ whose type uses the anonymous namespace [-Wsubobject-linkage]
Attachments
Patch
(1.68 KB, patch)
2017-10-23 21:13 PDT
,
Michael Catanzaro
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Michael Catanzaro
Comment 1
2017-10-23 21:13:58 PDT
Created
attachment 324635
[details]
Patch
Joseph Pecoraro
Comment 2
2017-10-23 21:16:09 PDT
Comment on
attachment 324635
[details]
Patch Interesting. Should we put this in the same anonymous namespace as the stuff at the top of the file? If this is enough though, r=me
Michael Catanzaro
Comment 3
2017-10-23 21:33:05 PDT
There's only one anonymous namespace per translation unit (normally that's one file, but for us now that's a unified source bundle). So it doesn't matter where it goes. Up to you; I figured the class is in its current location for a reason.
WebKit Commit Bot
Comment 4
2017-10-24 01:38:32 PDT
Comment on
attachment 324635
[details]
Patch Clearing flags on attachment: 324635 Committed
r223885
: <
https://trac.webkit.org/changeset/223885
>
WebKit Commit Bot
Comment 5
2017-10-24 01:38:33 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2017-11-15 13:01:46 PST
<
rdar://problem/35568516
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug