-Wsubobject-linkage warning in InspectorIndexedDBAgent.cpp https://bugs.webkit.org/show_bug.cgi?id=178698

Reviewed by Joseph Pecoraro.

* inspector/InspectorIndexedDBAgent.cpp:


Canonical link: https://commits.webkit.org/194881@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@223885 268f45cc-cd09-0410-ab3c-d52691b4dbfc